{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 66,
  "lineage": "99f92c61-1c63-bd50-91ef-d70240425d9a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mongo_from_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-27T12:41:50.737-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/clgcporg127-p001/global/firewalls/wiz-allow-mongo-k8s",
            "log_config": [],
            "name": "wiz-allow-mongo-k8s",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/networks/wiz-exercise-vpc",
            "priority": 1000,
            "project": "clgcporg127-p001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/firewalls/wiz-allow-mongo-k8s",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mongodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.wiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-27T11:35:18.478-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/clgcporg127-p001/global/firewalls/wiz-allow-ssh-public",
            "log_config": [],
            "name": "wiz-allow-ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/networks/wiz-exercise-vpc",
            "priority": 1000,
            "project": "clgcporg127-p001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/firewalls/wiz-allow-ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.wiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vulnerable_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260721",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/zones/us-central1-a/disks/wiz-mongodb-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/clgcporg127-p001/zones/us-central1-a/instances/wiz-mongodb-vm",
            "instance_id": "527316627139200215",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "iW_wdzRo9dk=",
            "metadata_startup_script": "#!/bin/bash\n# 1. Install Outdated MongoDB (4.4)\nwget -qO - https://www.mongodb.org/static/pgp/server-4.4.asc | sudo apt-key add -\necho \"deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.4 multiverse\" | sudo tee /etc/apt/sources.list.d/mongodb-org-4.4.list\nsudo apt-get update\nsudo apt-get install -y mongodb-org=4.4.29 mongodb-org-server=4.4.29 mongodb-org-shell=4.4.29 mongodb-org-mongos=4.4.29 mongodb-org-tools=4.4.29\ [...]
            "name": "wiz-mongodb-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.116.119.241",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/networks/wiz-exercise-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/regions/us-central1/subnetworks/wiz-public-subnet",
                "subnetwork_project": "clgcporg127-p001"
              }
            ],
            "project": "clgcporg127-p001",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/zones/us-central1-a/instances/wiz-mongodb-vm",
            "service_account": [
              {
                "email": "wiz-vulnerable-vm-sa@clgcporg127-p001.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public-ssh"
            ],
            "tags_fingerprint": "-LRTc09Qp5A=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.wiz_vpc",
            "google_compute_subnetwork.public_subnet",
            "google_service_account.overly_permissive_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "wiz_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/clgcporg127-p001/global/networks/wiz-exercise-vpc",
            "mtu": 0,
            "name": "wiz-exercise-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8513717342348909119",
            "project": "clgcporg127-p001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/networks/wiz-exercise-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-27T11:35:18.734-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/clgcporg127-p001/regions/us-central1/subnetworks/wiz-private-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "wiz-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/networks/wiz-exercise-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "clgcporg127-p001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.168.0.0/14",
                "range_name": "gke-wiz-k8s-cluster-pods-cb621f30"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/regions/us-central1/subnetworks/wiz-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.wiz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-27T11:35:18.678-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/clgcporg127-p001/regions/us-central1/subnetworks/wiz-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "wiz-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/global/networks/wiz-exercise-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "clgcporg127-p001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/clgcporg127-p001/regions/us-central1/subnetworks/wiz-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.wiz_vpc"
          ]
        }
      ]
    }
  ]
}